--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   bloc: ^8.1.4
   equatable: ^2.0.5
+  xml: ^6.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,9 +63,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/xml_forms/form_one.xml
+    - assets/xml_forms/form_two.xml
+    - assets/xml_forms/form_three.xml
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
