--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   bloc: ^8.1.4
   equatable: ^2.0.5
   xml: ^6.5.0
+  path_provider: ^2.0.11
 
 
   # The following adds the Cupertino Icons font to your application.
