--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_form_builder: ^9.3.0
   form_builder_validators: ^11.0.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
