--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_form_builder: ^9.3.0
   form_builder_validators: ^11.0.0
   fl_chart: ^0.69.0
+  file_picker: ^8.1.4
 
 dev_dependencies:
   flutter_test:
